VERSION NOTES:

v0.8.4

***********************
*** VERSION CHANGES ***
***********************

- bach.quantize: removed puzzling innocuous errors for SmartMix mode

- bach.score: fixed bug causing wrong playback (missing notes) when some time-changing operations were performed on a score with measure-attached markers.

- bell: bach.sum, bach.prod now work

v0.8.3

***********************
*** VERSION CHANGES ***
***********************

- bach.score: fixed crash with 32nd notes in xml import 

- bach.dict2llll: now supports dictionary arrays 


v0.8.2b

*****************
*** IMPORTANT ***
*****************

*** THESE CHANGES MIGHT BREAK COMPATIBILITY WITH OLDER PATCHES ***

- bell:
    makepitch function now treats negative degrees as descending steps (e.g., makepitch(-1, 0, 5) returns B4)
    evaluation precedence of the unary minus operator is now lower than exponentiation (-2 ** 2 now returns -4, previously 4)
    fixed argument names for the makepitch function: new argument names are "degree", "alter" and "octave"
    :* operator returns null for non-positive repeat counts

- bach.expr:
    evaluation precedence of the ** operator is now right-to-left, as per the documentation (2**3**2 now returns 512, previously 64)
    evaluation precedence of the ! and ~ operators is now higher than exponentiation

- bach.beatunbox:
    now the default merge mode is "always": if you need the previous default ("Merge When Drawable") please add @merge 1 to your object.
    fixed bug causing slot information being transferred onto breakpoints:
        if you had used a manual workaround, please update your patches

- bach.roll, bach.score, bach.slot:
    The "addslot" message is now deprecated in favour of the identical "setslot" message.
        The "addslot" message is still kept for backward compatibility, but you are encouraged to use "setslot" from now on.

- bach.roll, bach.score:
    Now Cmd+Alt+V DOES NOT OUTPUT all the parameters any longer